# FundIQ

./: .env.example  .gitignore  DEPLOY.md  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260527_1434_initial_schema.py  20260527_1501_hnsw_and_trigram_indexes_for_hybrid_.py  20260527_2022_scrape_runs_table.py
backend/app/: main.py
backend/app/agents/: critic.py  graph.py  llm.py  planner.py  retriever.py  scorer.py  state.py  writer.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  agents.py  analytics.py  grants.py  health.py
backend/app/core/: auth.py  config.py  db.py  exceptions.py  http_retry.py  logging.py  middleware.py  observability.py  prompts.py
backend/app/jobs/: __init__.py  scheduler.py  scrape_workflow.py
backend/app/models/: __init__.py  alert.py  application.py  base.py  eval.py  feedback.py  grant.py  prompt.py  roadmap.py  scrape_run.py  session.py  startup.py
backend/app/rag/: cache.py  fusion.py  hyde.py  pipeline.py  reranker.py  sparse.py
backend/app/schemas/: agents.py  analytics.py  enrichment.py  grants.py
backend/app/scrapers/: base.py  cli.py  normalize.py  schemas.py
backend/app/scrapers/portals/: bayernkapital.py  eic.py  exist.py  horizon.py  kfw.py  lbank.py  nrwbank.py
backend/app/services/: analytics_service.py  embedding.py  grant_enrichment.py  grant_etl.py
backend/tests/: conftest.py
backend/tests/evals/: test_metrics.py
backend/tests/fixtures/scrapers/bayernkapital/: early_stage_real.html
backend/tests/fixtures/scrapers/eic/: accelerator_real.html
backend/tests/fixtures/scrapers/exist/: gruendungsstipendium_real.html
backend/tests/fixtures/scrapers/horizon/: horizon_europe_real.html
backend/tests/fixtures/scrapers/kfw/: startgeld_067_real.html
backend/tests/fixtures/scrapers/lbank/: guw_bw_real.html
backend/tests/fixtures/scrapers/nrwbank/: gruendungszuschuss_15086_real.html
backend/tests/integration/: test_agents_auth.py  test_agents_recommend.py  test_db_crud.py  test_grant_enrichment.py  test_grant_etl.py  test_grants_api.py  test_health.py  test_rag_hyde_cache.py  test_rag_pipeline.py  test_scrape_workflow.py
backend/tests/unit/: test_agent_llm_backoff.py  test_agent_llm_scrub.py  test_config.py  test_embedding_gemini.py  test_models.py  test_observability_noop.py  test_rag_fusion.py  test_reranker_cohere.py  test_scraper_bayernkapital.py  test_scraper_eic.py  test_scraper_horizon.py  test_scraper_kfw.py  test_scraper_lbank.py  test_scraper_normalize.py  test_scraper_nrwbank.py  test_scraper_parse.py
docs/: master_build_prompt.md
docs/adr/: 001-pgvector-over-pinecone.md
frontend/: next.config.ts  package-lock.json  package.json  proxy.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/api/agents/recommend/: route.ts
frontend/app/api/agents/recommend/stream/: route.ts
frontend/app/grants/: page.tsx
frontend/app/grants/[id]/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/recommend/: page.tsx
frontend/app/saved/: page.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
frontend/components/: agent-loader.tsx  agent-stage-progress.tsx  agent-trace-strip.tsx  critic-findings-card.tsx  fit-badge.tsx  grant-card.tsx  grant-filters.tsx  grant-pagination.tsx  grant-row.tsx  grant-search.tsx  grant-table.tsx  recommendation-card.tsx  save-button.tsx  saved-nav-link.tsx  site-nav.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/components/analytics/: funding-by-portal-chart.tsx  portal-count-chart.tsx  stat-card.tsx
frontend/lib/: api.ts  format.ts  use-agent-session.ts  use-platform.ts  use-recent-searches.ts  use-saved-grants.ts  use-startup-profile.ts
infra/compose/: docker-compose.yml  postgres-init.sql
infra/docker/: backend.Dockerfile
ml/evals/: ANALYSIS.md  __init__.py  gold_set.jsonl  metrics.py  run_evals.py
ml/evals/results/: 20260531T182210Z_report.md  20260531T190812Z_report.md
ml/evals/results/runs/: 20260531T182210Z.jsonl  20260531T190812Z.jsonl
